--- a/config/Release_eu/dol_slices.yml
+++ b/config/Release_eu/dol_slices.yml
@@ -472,6 +472,10 @@ libs/JSystem/JAudio/System/JASSoundParams.cpp:
     .text: [0x80096134, 0x80096190]
     .sdata2: [0x803d6e10, 0x803d6e18]
 
+libs/JSystem/JAudio/System/JASWSParser.cpp:
+    .text: [0x80096190, 0x800966e8]
+    .sbss: [0x803d4d28, 0x803d4d30]
+
 libs/JSystem/JAudio/System/JASInstRand.cpp:
     .text: [0x8009853c, 0x8009867c]
     .data: [0x8034b8b8, 0x8034b8c8]
