--- a/config/MarioClub_us/dol_slices.yml
+++ b/config/MarioClub_us/dol_slices.yml
@@ -1637,6 +1637,32 @@ src/Sato/stMath.cpp:
     .sbss: [0x80416ac8, 0x80416ad0]
     .sdata2: [0x8041bb60, 0x8041bbb8]
 
+#src/Sato/ItemObjMgr.cpp:
+    #.text: [0x8023cc44, 0x80243f84]
+    #.ctors: [0x80316408, 0x8031640c]
+    #.rodata: [0x8037fcd0, 0x803800e0]
+    #.data: [0x8039fa58, 0x8039fc38]
+    #.bss: [0x803ed680, 0x803ed6e8]
+    #.sdata: [0x80414990, 0x804149b8]
+    #.sbss: [0x80416b50, 0x80416b88]
+    #.sdata2: [0x8041be08, 0x8041be58]
+    #.sbss2: [0x8041e208, 0x8041e210]
+
+src/Sato/stEfctWeed.cpp:
+    .text: [0x80254ba8, 0x80254ec4]
+    .ctors: [0x80316418, 0x8031641c] 
+    .data: [0x803a08d0, 0x803a0900]
+    .bss: [0x803ed778, 0x803ed7a8]
+    .sdata: [0x80414bb0, 0x80414bc0]
+    .sbss: [0x80416bc8, 0x80416bd0]
+    .sdata2: [0x8041bf90, 0x8041bf98]
+
+src/Sato/RivalKart.cpp:
+    .text: [0x80270f9c, 0x802714b0]
+    .ctors: [0x80316458, 0x8031645c]
+    .data: [0x803a1ca0, 0x803a1cb8]
+    .bss: [0x803edc40, 0x803edc70]
+
 src/Shiraiwa/WipeSlide.cpp:
     .text: [0x802b7d5c, 0x802b8760]
     .ctors: [0x80316544, 0x80316548]
@@ -1709,21 +1735,6 @@ src/Shiraiwa/WipeCurtain.cpp:
     .sbss: [0x80417188, 0x80417190]
     .sdata2: [0x8041d5a0, 0x8041d5c0]
     .sbss2: [0x8041e250, 0x8041e254]
-
-src/Sato/stEfctWeed.cpp:
-    .text: [0x80254ba8, 0x80254ec4]
-    .ctors: [0x80316418, 0x8031641c] 
-    .data: [0x803a08d0, 0x803a0900]
-    .bss: [0x803ed778, 0x803ed7a8]
-    .sdata: [0x80414bb0, 0x80414bc0]
-    .sbss: [0x80416bc8, 0x80416bd0]
-    .sdata2: [0x8041bf90, 0x8041bf98]
-
-src/Sato/RivalKart.cpp:
-    .text: [0x80270f9c, 0x802714b0]
-    .ctors: [0x80316458, 0x8031645c]
-    .data: [0x803a1ca0, 0x803a1cb8]
-    .bss: [0x803edc40, 0x803edc70]
 
 src/Yamamoto/kartCamera.cpp:
     .text: [0x802e0248, 0x802e17b8]
