--- a/config/Release_eu/dol_slices.yml
+++ b/config/Release_eu/dol_slices.yml
@@ -1515,6 +1515,38 @@ src/Osako/password.cpp:
     .text: [0x801e76a8, 0x801e7a8c]
     .rodata: [0x80341938, 0x803419a0]
 
+src/Sato/stMath.cpp:
+    .text: [0x801ebb10, 0x801ed470] 
+    .data: [0x8035d110, 0x8035d128]
+    .sdata: [0x803d3b78, 0x803d3b80]
+    .sbss: [0x803d5cf8, 0x803d5d00]
+    .sdata2: [0x803d9d60, 0x803d9db0]
+
+src/Sato/stEfctWeed.cpp:
+    .text: [0x8021d0f4, 0x8021d410]
+    .ctors: [0x802d881c, 0x802d8820]
+    .data: [0x803602f0, 0x80360320]
+    .bss: [0x803acad8, 0x803acb08]
+    .sdata: [0x803d3e48, 0x803d3e58]
+    .sbss: [0x803d5df0, 0x803d5df8]
+    .sdata2: [0x803da100, 0x803da108]
+
+src/Sato/RivalKart.cpp:
+    .text: [0x8023586c, 0x80235d80]
+    .ctors: [0x802d885c, 0x802d8860]
+    .data: [0x803616c0, 0x803616d8]
+    .bss: [0x803acfa0, 0x803acfd0]
+
+src/Sato/ItemHeart.cpp:
+    .text: [0x80248e0c, 0x802496a4]
+    .ctors: [0x802d8890, 0x802d8894]
+    .rodata: [0x80343430, 0x80343448]
+    .data: [0x803624f8, 0x803625c8]
+    .bss: [0x803ad268, 0x803ad298]
+    .sdata: [0x803d4370, 0x803d4380]
+    .sdata2: [0x803da660, 0x803da670]
+    .sbss2: [0x803dc118, 0x803dc120]
+
 src/Shiraiwa/WipeSlide.cpp:
     .text: [0x80276fa8, 0x802779ac]
     .ctors: [0x802d8948, 0x802d894c]
@@ -1549,7 +1581,7 @@ src/Shiraiwa/WipeCheck.cpp:
     .bss: [0x803ae0e8, 0x803ae118]
     .sdata: [0x803d4798, 0x803d47a0]
     .sdata2: [0x803db2f0, 0x803db308]
-    
+
 src/Shiraiwa/WipeShut.cpp:
     .text: [0x80290918, 0x80291270]
     .ctors: [0x802d89b4, 0x802d89b8]
@@ -1586,28 +1618,6 @@ src/Shiraiwa/WipeCurtain.cpp:
     .sbss: [0x803d63b0, 0x803d63b8]
     .sdata2: [0x803db408, 0x803db428]
     .sbss2: [0x803dc130, 0x803dc134]
-
-src/Sato/stMath.cpp:
-    .text: [0x801ebb10, 0x801ed470] 
-    .data: [0x8035d110, 0x8035d128]
-    .sdata: [0x803d3b78, 0x803d3b80]
-    .sbss: [0x803d5cf8, 0x803d5d00]
-    .sdata2: [0x803d9d60, 0x803d9db0]
-
-src/Sato/stEfctWeed.cpp:
-    .text: [0x8021d0f4, 0x8021d410]
-    .ctors: [0x802d881c, 0x802d8820]
-    .data: [0x803602f0, 0x80360320]
-    .bss: [0x803acad8, 0x803acb08]
-    .sdata: [0x803d3e48, 0x803d3e58]
-    .sbss: [0x803d5df0, 0x803d5df8]
-    .sdata2: [0x803da100, 0x803da108]
-
-src/Sato/RivalKart.cpp:
-    .text: [0x8023586c, 0x80235d80]
-    .ctors: [0x802d885c, 0x802d8860]
-    .data: [0x803616c0, 0x803616d8]
-    .bss: [0x803acfa0, 0x803acfd0]
 
 src/Yamamoto/kartCamera.cpp:    
     .text: [0x8029dffc, 0x8029f4b8]
